general swagger modifications
